--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "concurrently": "^9.2.0",
     "cross-env": "^10.0.0",
     "electron": "^37.2.5",
+    "esbuild": "^0.25.9",
     "wait-on": "^8.0.4"
   },
   "dependencies": {
-    "odbc": "^2.4.9"
+    "odbc": "^2.4.9",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
