--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vendor_quoting_process",
+  "name": "procure-hub",
   "version": "1.0.0",
-  "description": "",
+  "description": "ProCure Hub - Professional Procurement Management System",
   "homepage": "https://github.com/Etezazi-Industries/Vendor-Quoting-Process#readme",
   "bugs": {
     "url": "https://github.com/Etezazi-Industries/Vendor-Quoting-Process/issues"
